# MontyBot

./: CMakeLists.txt  README.md  bbc  bitboard.c  fast_config.py  latest_model.onnx  main.py  makefile  model.pth  pytest.ini  requirements.txt  setup.sh
backend/: CmakeLists.txt
backend/src/: main.cpp
include/: bitboard.h  engine.h  httplib.h  moveGen.h  restServer.h
scripts/: bench_cpu_speedups.py  benchmark_ort_vs_torch.py
src/: engine.cpp  main.cpp  moveGen.cpp  restServer.cpp
tests/: test_core.py  test_game.py  test_integration.py  test_main.py  test_mcts.py  test_network.py  test_onnx_ort.py  test_replay_buffer.py  test_self_play.py  test_trainer.py
training/: config.py  device_manager.py  evaluate.py  game.py  mcts.py  metrics.py  network.py  onnx_export.py  ort_inference.py  progressive_trainer.py  quantization.py  replay_buffer.py  self_play.py  train.py  trainer.py
training/export/: onnx.py
training/model/: net.py  train.py
